--- a/app/src/pages/profile/settings.html
+++ b/app/src/pages/profile/settings.html
@@ -32,6 +32,10 @@
                   <ion-label>{{'SIGNUP_GUEST_ON_PARTNER' | translate}}</ion-label>
                   <ion-radio value="partner"></ion-radio>
               </ion-item>
+              <ion-item>
+                    <ion-label>{{'SIGNUP_GUEST_ON_EVERYONE' | translate}}</ion-label>
+                    <ion-radio value="everyone"></ion-radio>
+                </ion-item>
           </ion-list>
           <p>{{'SIGNUP_PREFERRED_LANGUAGE' | translate}}</p>
           <ion-list #prefLang formControlName="prefLang" radio-group [(ngModel)]="currentPrefLang">
