--- a/app/src/pages/signup/signup.html
+++ b/app/src/pages/signup/signup.html
@@ -29,6 +29,10 @@
                     <ion-label>{{'SIGNUP_GUEST_ON_PARTNER' | translate}}</ion-label>
                     <ion-radio value="partner"></ion-radio>
                 </ion-item>
+                <ion-item>
+                    <ion-label>{{'SIGNUP_GUEST_ON_EVERYONE' | translate}}</ion-label>
+                    <ion-radio value="everyone"></ion-radio>
+                </ion-item>
             </ion-list>
             <button ion-button full type="submit">{{'SIGNUP_CREATE_ACCOUNT' | translate}}</button>
         </form>
