--- a/app/src/pages/activities/activity-detail/activity-detail.html
+++ b/app/src/pages/activities/activity-detail/activity-detail.html
@@ -27,14 +27,16 @@
       </div>
     </div>
 
-    <button [ngClass]="{'signedUp': isSignedUp()}" ion-button full icon-left (click)="signup()"><ion-icon *ngIf="!isSignedUp()" name="checkmark"></ion-icon><ion-icon *ngIf="isSignedUp()" name="checkmark-circle"></ion-icon>{{'ACTIVITY_DETAIL_SIGNUP' | translate}}</button>
-    <button [ngClass]="{'interestedIn': isInterestedIn()}"ion-button full icon-left (click)="interested()"><ion-icon *ngIf="!isInterestedIn()" name="star-outline"></ion-icon><ion-icon *ngIf="isInterestedIn()" name="star"></ion-icon>{{'ACTIVITY_DETAIL_INTERESTED' | translate}}</button>
+    <button [ngClass]="{'signedUp': isSignedUp()}" ion-button full icon-left (click)="signup()"><ion-icon *ngIf="!isSignedUp()" name="checkmark"></ion-icon><ion-icon *ngIf="isSignedUp()" name="checkmark-circle"></ion-icon><span *ngIf="!isSignedUp()">{{'ACTIVITY_DETAIL_SIGNUP' | translate}}</span><span *ngIf="isSignedUp()">{{'ACTIVITY_DETAIL_FRAMELD' | translate}}</span></button>
+    <button [ngClass]="{'interestedIn': isInterestedIn()}"ion-button full icon-left (click)="interested()"><ion-icon *ngIf="!isInterestedIn()" name="star-outline"></ion-icon><ion-icon *ngIf="isInterestedIn()" name="star"></ion-icon><span *ngIf="!isInterestedIn()">{{'ACTIVITY_DETAIL_INTERESTED' | translate}}</span><span *ngIf="isInterestedIn()">{{'ACTIVITY_DETAIL_NOTINTERESTED' | translate}}</span></button>
 
     <div class="item-list">
         <div class="item-list-header">{{'ACTIVITY_DETAIL_INFO' | translate}}</div>
         <div class="item-list-body" style="white-space:pre-wrap;">{{activity.info[translate.currentLang]}}</div>
         <div class="item-list-header">{{'ACTIVITY_DETAIL_ORGANISER' | translate}}</div>
         <div class="item-list-body">{{activity.organiser}}</div>
+        <div class="item-list-header" *ngIf="activity.maxAmountOfParticipants" >{{'ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS' | translate}}</div>
+        <div class="item-list-body" *ngIf="activity.maxAmountOfParticipants" >{{activity.maxAmountOfParticipants}}</div>
 
         <div class="item-list-header">{{'ACTIVITY_DETAIL_PARTICIPANTS' | translate}}</div>
         <div class="item-list-body"><div *ngFor="let participant of participantNames | sort"><span [ngClass]="{'thisUser': isThisUser(participant)}">{{participant}}</span></div></div>
